--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -73,7 +73,7 @@ header a {
   right: 20px;
   cursor: pointer;
   background: #f1f1f1;
-  padding: 6px;
+  padding: 8px;
   border-radius: 50%;
   color: #333;
 }
@@ -111,4 +111,9 @@ div.error {
   color: var(--error);
   border-radius: 4px;;
   margin: 20px 0;
+  padding: 5px;
+}
+
+input.error {
+  border: 1px solid var(--error);
 }
