--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -117,3 +117,30 @@ div.error {
 input.error {
   border: 1px solid var(--error);
 }
+
+/* Nav bar styles */
+nav {
+  display: flex;
+  align-items: center;
+}
+nav a{
+  margin-left: 10px;
+}
+
+nav button {
+  background-color: white;
+  color: var(--primary);
+  border: 2px solid var(--primary);
+  padding: 6px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 1em;
+}
+/* auth forms */
+form.signup, form.login {
+  max-width: 400px;
+  margin: 40px auto;
+  padding: 20px;
+  background: white;
+  border-radius: 4px;
+}
