--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -135,6 +135,7 @@ nav button {
   border-radius: 4px;
   cursor: pointer;
   font-size: 1em;
+  margin-left: 10px;
 }
 /* auth forms */
 form.signup, form.login {
